--- a/app/src/main/res/layout/fragment_action.xml
+++ b/app/src/main/res/layout/fragment_action.xml
@@ -94,6 +94,10 @@ android:id="@+id/main_root">
                     android:hint="@string/fragement_action_url"
                     android:textColor="@android:color/darker_gray"
                     android:inputType="text"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     android:maxLines="1"
                     android:imeOptions="actionNext"
                     android:singleLine="true" />
