--- a/app/src/main/res/layout/activity_mobikyte.xml
+++ b/app/src/main/res/layout/activity_mobikyte.xml
@@ -21,6 +21,7 @@
         android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:text="Learn More"
+        android:visibility="invisible"
         android:gravity="center"
         android:textColor="@color/white"
         android:padding="12dp"
@@ -35,6 +36,7 @@
         android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:text="Get Started"
+        android:visibility="invisible"
         android:layout_above="@+id/already_registered"
         android:gravity="center"
         android:textColor="@color/white"
