--- a/app/src/main/res/layout/fragment_welcome_fragement.xml
+++ b/app/src/main/res/layout/fragment_welcome_fragement.xml
@@ -28,73 +28,78 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
-        android:id="@+id/l1"
-        android:padding="16dp"
-        android:layout_marginTop="0dp"
-        android:layout_below="@+id/toolbar"
-        style="@style/welLinear"
-        android:orientation="vertical">
-
-        <com.oxilo.shopsity.ui.CustomTextView
-            style="@style/msgtextbold"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:layout_gravity="center"
-            android:text="@string/wellcome"/>
-
-        <com.oxilo.shopsity.ui.CustomTextView
-            style="@style/msgtextlight"
-            android:text="@string/wellcome1"
-            android:layout_gravity="center"
-            android:textStyle="normal"
-            android:textColor="@color/mdtp_light_gray"
-            android:textSize="11sp"/>
-
-        <com.oxilo.shopsity.ui.CustomTextView
-            style="@style/msgtextbold"
-            android:text="@string/wellcome2"
-            android:textColor="@color/mdtp_light_gray"
-            android:layout_gravity="center|left"
-            android:gravity="center|left"
-            android:textStyle="normal"
-            android:textSize="12sp"
-            android:layout_marginTop="20dp"/>
-
-        <com.oxilo.shopsity.ui.CustomTextView
-            style="@style/msgtextbold"
-            android:text="@string/wellcome3"
-            android:layout_gravity="center|left"
-            android:gravity="center|left"
-            android:layout_marginTop="20dp"
-            android:textColor="@color/mdtp_light_gray"
-            android:textStyle="bold"
-            android:textSize="12dp"/>
-
-        <com.oxilo.shopsity.ui.CustomTextView
-            style="@style/msgtextbold"
-            android:text="@string/wellcome4"
-            android:layout_gravity="center|left"
-            android:gravity="center|left"
-            android:textColor="@color/mdtp_light_gray"
-            android:textStyle="bold"
-            android:textSize="12dp"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar">
 
         <LinearLayout
-            android:id="@+id/l5"
+            android:id="@+id/l1"
+            android:padding="16dp"
+            android:layout_marginTop="0dp"
             style="@style/welLinear"
-            android:layout_marginTop="20dp">
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_next"
-                android:textColor="@android:color/white"
-                android:textStyle="bold" />
+            android:orientation="vertical">
 
-        </LinearLayout>
+            <com.oxilo.shopsity.ui.CustomTextView
+                style="@style/msgtextbold"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:layout_gravity="center"
+                android:text="@string/wellcome"/>
+
+
+            <com.oxilo.shopsity.ui.CustomTextView
+                style="@style/msgtextlight"
+                android:text="@string/wellcome1"
+                android:layout_gravity="center"
+                android:textStyle="normal"
+                android:textColor="@color/mdtp_light_gray"
+                android:textSize="11sp"/>
+
+            <com.oxilo.shopsity.ui.CustomTextView
+                style="@style/msgtextbold"
+                android:text="@string/wellcome2"
+                android:textColor="@color/mdtp_light_gray"
+                android:layout_gravity="center|left"
+                android:gravity="center|left"
+                android:textStyle="normal"
+                android:textSize="12sp"
+                android:layout_marginTop="20dp"/>
+
+            <com.oxilo.shopsity.ui.CustomTextView
+                style="@style/msgtextbold"
+                android:text="@string/wellcome3"
+                android:layout_gravity="center|left"
+                android:gravity="center|left"
+                android:layout_marginTop="20dp"
+                android:textColor="@color/mdtp_light_gray"
+                android:textStyle="bold"
+                android:textSize="12dp"/>
+
+            <com.oxilo.shopsity.ui.CustomTextView
+                style="@style/msgtextbold"
+                android:text="@string/wellcome4"
+                android:layout_gravity="center|left"
+                android:gravity="center|left"
+                android:textColor="@color/mdtp_light_gray"
+                android:textStyle="bold"
+                android:textSize="12dp"/>
+
+            <LinearLayout
+                android:id="@+id/l5"
+                style="@style/welLinear"
+                android:layout_marginTop="20dp">
+                <android.support.v7.widget.AppCompatButton
+                    android:id="@+id/email_sign_in_button"
+                    style="?android:textAppearanceSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/action_next"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
             <com.oxilo.shopsity.ui.CustomTextView
                 android:id="@+id/learn"
@@ -110,40 +115,51 @@
                 android:text="Learn More"/>
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/darker_gray"/>
-        <LinearLayout
-            android:layout_height="match_parent"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="30dp"
-            android:id="@+id/l7"
-            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:background="@android:color/darker_gray"/>
+            <LinearLayout
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="30dp"
+                android:id="@+id/l7"
+                android:orientation="vertical">
 
-            <com.oxilo.shopsity.ui.CustomTextView
-                android:id="@+id/welcome_contact_link"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:padding="5dp"
-                android:text=" contact@mobikyte.com"
-                android:textColorLink="@color/mdtp_light_gray"
-                android:autoLink="email"
-                android:layout_alignParentLeft="true"/>
-            <com.oxilo.shopsity.ui.CustomTextView
-                android:id="@+id/welcome_contact_link2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12dp"
-                android:padding="5dp"
-                android:text="www.mobikyte.com"
-                android:textColorLink="@color/mdtp_light_gray"
-                android:autoLink="email"
-                android:layout_alignParentRight="true"/>
+                <com.oxilo.shopsity.ui.CustomTextView
+                    android:id="@+id/welcome_contact_link"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:padding="5dp"
+                    android:text=" contact@mobikyte.com"
+                    android:textColorLink="@color/mdtp_light_gray"
+                    android:autoLink="email"
+                    android:layout_alignParentLeft="true"/>
+                <com.oxilo.shopsity.ui.CustomTextView
+                    android:id="@+id/welcome_contact_link2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:padding="5dp"
+                    android:text="www.mobikyte.com"
+                    android:textColorLink="@color/mdtp_light_gray"
+                    android:autoLink="email"
+                    android:layout_alignParentRight="true"/>
+            </LinearLayout>
+
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:src="@drawable/sity_adds_icon"
+                android:layout_marginTop="10dp"
+                android:scaleType="centerInside"/>
+
         </LinearLayout>
 
-    </LinearLayout>
+    </ScrollView>
 </com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout>
 
