--- a/app/src/main/res/menu/navigation_drawer_items.xml
+++ b/app/src/main/res/menu/navigation_drawer_items.xml
@@ -31,6 +31,11 @@
                 android:title="@string/drawer_item_4" />
 
             <item
+                android:id="@+id/navItem8"
+                android:icon="@android:color/transparent"
+                android:title="@string/drawer_item_8" />
+
+            <item
                 android:id="@+id/navItem7"
                 android:icon="@android:color/transparent"
                 android:title="@string/drawer_item_7" />
