--- a/app/src/main/res/layout/fragment_thankyou.xml
+++ b/app/src/main/res/layout/fragment_thankyou.xml
@@ -410,6 +410,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/action_see_invoice"
+                android:visibility="gone"
                 android:textColor="@android:color/white"
                 android:textStyle="bold" />
 
