--- a/app/src/main/res/layout/fragment_welcome_fragement.xml
+++ b/app/src/main/res/layout/fragment_welcome_fragement.xml
@@ -1,6 +1,5 @@
 <com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -125,6 +124,7 @@
                 android:layout_width="wrap_content"
                 android:layout_marginTop="30dp"
                 android:id="@+id/l7"
+                android:visibility="invisible"
                 android:orientation="vertical">
 
                 <com.oxilo.shopsity.ui.CustomTextView
