--- a/app/src/main/res/layout/fragment_action.xml
+++ b/app/src/main/res/layout/fragment_action.xml
@@ -108,6 +108,7 @@ android:id="@+id/main_root">
                 android:id="@+id/text4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_below="@+id/text3">
 
                 <EditText
