--- a/app/src/main/res/layout/fragment_pay.xml
+++ b/app/src/main/res/layout/fragment_pay.xml
@@ -15,100 +15,120 @@
         <!--app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
         <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >-->
     <!--</android.support.v7.widget.Toolbar>-->
-    <include
-        android:id="@+id/line1"
+
+    <ProgressBar
+        android:id="@+id/login_progress"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        layout="@layout/line_progress_five" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone"/>
 
     <LinearLayout
+        android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        android:layout_below="@+id/line1">
+        android:orientation="vertical">
 
-        <TextView
+        <include
+            android:id="@+id/line1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|left"
-            android:text="@string/choose_option"
-            android:gravity="center"
-            android:textColor="@color/mdtp_light_gray"/>
+            android:layout_height="50dp"
+            layout="@layout/line_progress_five" />
 
-        <TextView
-            android:id="@+id/action_free_trial"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:background="@drawable/rounded_map_search"
-            android:layout_gravity="center"
-            android:text="@string/free_trial"
-            android:textAllCaps="true"
-            android:layout_marginTop="15dp"
-            android:gravity="center"
-            android:textColor="@android:color/black"
-            />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:layout_below="@+id/line1">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|left"
+                android:text="@string/choose_option"
+                android:gravity="center"
+                android:textColor="@color/mdtp_light_gray"/>
+
+            <TextView
+                android:id="@+id/action_free_trial"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:background="@drawable/rounded_map_search"
+                android:layout_gravity="center"
+                android:text="@string/free_trial"
+                android:textAllCaps="true"
+                android:layout_marginTop="15dp"
+                android:gravity="center"
+                android:textColor="@android:color/black"
+                />
 
 
-        <TextView
-            android:id="@+id/action_plan_a"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:background="@drawable/rounded_map_search"
-            android:layout_gravity="center"
-            android:text="@string/plan_a"
-            android:layout_marginTop="15dp"
-            android:textAllCaps="true"
-            android:gravity="center"
-            android:textColor="@android:color/black"
-            />
+            <TextView
+                android:id="@+id/action_plan_a"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:background="@drawable/rounded_map_search"
+                android:layout_gravity="center"
+                android:text="@string/plan_a"
+                android:layout_marginTop="15dp"
+                android:textAllCaps="true"
+                android:gravity="center"
+                android:textColor="@android:color/black"
+                />
 
 
-        <TextView
-            android:id="@+id/action_plan_b"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:background="@drawable/rounded_map_search"
-            android:layout_gravity="center"
-            android:text="@string/plan_b"
-            android:textAllCaps="true"
-            android:layout_marginTop="15dp"
-            android:gravity="center"
-            android:textColor="@android:color/black"
-            />
+            <TextView
+                android:id="@+id/action_plan_b"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:background="@drawable/rounded_map_search"
+                android:layout_gravity="center"
+                android:text="@string/plan_b"
+                android:textAllCaps="true"
+                android:layout_marginTop="15dp"
+                android:gravity="center"
+                android:textColor="@android:color/black"
+                />
 
-        <TextView
-            android:id="@+id/action_plan_c"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:background="@drawable/rounded_map_search"
-            android:layout_gravity="center"
-            android:text="@string/plan_c"
-            android:layout_marginTop="15dp"
-            android:textAllCaps="true"
-            android:gravity="center"
-            android:textColor="@android:color/black"
-            />
+            <TextView
+                android:id="@+id/action_plan_c"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:background="@drawable/rounded_map_search"
+                android:layout_gravity="center"
+                android:text="@string/plan_c"
+                android:layout_marginTop="15dp"
+                android:textAllCaps="true"
+                android:gravity="center"
+                android:textColor="@android:color/black"
+                />
 
 
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/check_out_btn"
-            style="?android:textAppearanceSmall"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/checkout"
-            android:textColor="@android:color/white"
-            android:textStyle="bold" />
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/check_out_btn"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/checkout"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
 
+
+        </LinearLayout>
 
     </LinearLayout>
+
 
 </com.desarrollodroide.libraryfragmenttransactionextended.SlidingRelativeLayout>
